# SRWA

./: .env.example  .gitignore  ADMIN_KYC_GUIDE.md  Anchor.toml  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_SETUP.md  Cargo.toml  DEPLOY.md  FLOW_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  README.md  REDEPLOY_INSTRUCTIONS.md  TRANSFER_HOOK_SETUP.md  package-lock.json  package.json  test-simple.ts  wrangler.toml
frontend/: .editorconfig  .env.example  .npmrc  .prettierignore  .prettierrc  MOBILE_SUBMISSION.md  README.md  SOLEND_INTEGRATION.md  SOLEND_README.md  WRAP_SOL_INSTRUCTIONS.md  check-extensions-proper.mjs  check-extensions-simple.mjs  check-pdas.mjs  check-token-extensions.mjs  fetch-tx.mjs  find-mints.mjs  get-escrow-pda.mjs  index.html  init-hook-localnet.mjs  init-hook.mjs  init-kyc-localnet.mjs  inspect-pool-tx.mjs  list-mints.mjs  netlify.toml  package-lock.json  package.json  reinit-hook.mjs  tailwind.config.ts  vercel.json  vite.config.ts
frontend/dev-dist/: sw.js  sw.js.map
frontend/public/: _headers  _redirects  manifest.json
frontend/public/idl/: cashflow_engine.json  compliance_modules.json  identity_claims.json  offering_pool.json  pool_distribution.json  purchase_order.json  srwa_controller.json  srwa_factory.json  valuation_oracle.json  yield_adapter.json
frontend/scripts/: create-switchboard-feed.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx  polyfills.ts
frontend/src/components/: FlowDiagram.tsx
frontend/src/contexts/: CombinedProvider.tsx  ProgramContext.tsx  index.ts
frontend/src/hooks/: useIsAuthorizedAdmin.ts  useMotionConfig.ts  usePrefetchDashboard.ts  useProvider.ts  useSRWAOperations.ts  useUserRWATokens.ts  useWallet.ts
frontend/src/idl/: purchase_order.json  srwa_controller.json  srwa_factory.json
frontend/src/lib/: format.ts  solana-config.ts
frontend/src/pages/: Dashboard.tsx  Docs.tsx  Index.tsx  Investor.tsx  KYC.tsx  MarketDetail.tsx  PoolDetail.tsx  Pools.tsx  Register.tsx  SRWADemo.tsx  SRWAIssuance.tsx  SRWATestForm.tsx  markets.tsx
frontend/src/polyfills/: https-stub.js
frontend/src/services/: index.ts  lendingService.ts
frontend/src/types/: purchase_order.ts  purchase_order_idl.ts
keypairs_backup_20251030_191651/: srwa_factory-keypair.json
programs/cashflow_engine/: Cargo.toml
programs/cashflow_engine/src/: lib.rs
programs/compliance_modules/: Cargo.toml
programs/compliance_modules/src/: lib.rs
programs/identity_claims/: Cargo.toml
programs/identity_claims/src/: events.rs  lib.rs  state.rs
programs/offering_pool/: Cargo.toml
programs/offering_pool/src/: lib.rs
programs/pool_distribution/: Cargo.toml  README.md
programs/pool_distribution/src/: errors.rs  lib.rs  state.rs
programs/pool_distribution/src/instructions/: distribute.rs  initialize.rs  mod.rs  update_issuer.rs  update_threshold.rs
programs/purchase_order/: Cargo.toml
programs/purchase_order/src/: errors.rs  lib.rs  state.rs
programs/purchase_order/src/instructions/: approve_purchase_order.rs  cancel_purchase_order.rs  create_purchase_order.rs  deposit_tokens.rs  execute_purchase.rs  mark_as_approved.rs  mod.rs  reject_purchase_order.rs
programs/srwa_controller/: Cargo.toml
programs/srwa_controller/src/: lib.rs
programs/srwa_factory/: Cargo.toml
programs/srwa_factory/src/: errors.rs  lib.rs  state.rs
programs/srwa_factory/src/instructions/: add_kyc_provider.rs  add_platform_admin.rs  approve_srwa.rs  complete_kyc.rs  create_srwa.rs  enable_module.rs  initialize_kyc_registry.rs  mod.rs  open_offering.rs  request_srwa.rs  set_oracle_cfg.rs  update_trusted_issuer.rs
programs/valuation_oracle/: Cargo.toml
programs/valuation_oracle/src/: lib.rs
programs/yield_adapter/: Cargo.toml
programs/yield_adapter/src/: lib.rs
scripts/: add-admin.ts  deploy-phase1.sh  find-and-init-hooks.ts  initialize-admin-registry.ts  initialize-transfer-hook.ts  redeploy-factory.sh
srwa-token/srwa-protocol/: Anchor.toml  COMPLETE_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INVESTOR_KYC_FLOW.md  KYC_STEP_GUIDE.md  QUICK_START.md  README.md  test-create-token.ts
srwa-token/srwa-protocol/programs/srwa_factory/: Cargo.toml
srwa-token/srwa-protocol/programs/srwa_factory/src/: errors.rs  events.rs  lib.rs  state.rs
srwa-token/srwa-protocol/programs/srwa_factory/src/instructions/: approve_srwa.rs  configure_issuer_kyc.rs  create_srwa.rs  disable_module.rs  get_user_registry.rs  initialize_admin_registry.rs  mod.rs  register_user.rs  reject_srwa.rs  remove_platform_admin.rs  request_srwa.rs  rotate_role.rs  verify_investor_kyc.rs
tests/: pool-distribution-test.ts  srwa-phase1.ts
(+265 files in other folders)
