[package]
name = "purchase-order"
version = "0.1.0"
description = "SRWA Purchase Order - On-chain purchase requests for SRWA tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "purchase_order"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dependencies.indexmap]
version = "=2.6.0"
