[package]
name = "purchase-order"
version = "0.1.0"
description = "SRWA Purchase Order - On-chain purchase requests for SRWA tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "purchase_order"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bincode = "1.3.3"
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "0.31.1", features = ["idl-build"] }

[dependencies.indexmap]
version = "=2.6.0"
