[package]
name = "srwa_controller"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "srwa_controller"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions"] }
bincode = "1.3.3"
spl-transfer-hook-interface = "0.8.0"
spl-tlv-account-resolution = "0.8.0"
spl-type-length-value = "0.6.0"
anchor-spl = "0.31.1"

