[package]
name = "srwa_factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "srwa_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "0.31.1", features = ["idl-build", "token_2022"] }
spl-token-2022 = { version = "6.0", features = ["no-entrypoint"] }
srwa_controller = { path = "../srwa_controller", features = ["no-entrypoint"] }
bincode = "1.3.3"
